oscilloscope/crates/oscilloscope-core/tests/snapshots/golden__each_tree_loop_concurrency.snap
---
source: crates/oscilloscope-core/tests/golden.rs
expression: rendered
---
--- observation 0 ---
log:
status:
--- observation 1 ---
log:
  ▶ prime.each_tree.iter_0.nap  shell echo a
  ▶ prime.each_tree.iter_1.nap  shell echo b
  ✓ prime.each_tree.iter_0.nap  0.0s  a
  ▶ prime.each_tree.iter_2.nap  shell echo c
  ✓ prime.each_tree.iter_1.nap  0.0s  b
  ▶ prime.each_tree.iter_3.nap  shell echo d
  ✓ prime.each_tree.iter_2.nap  0.0s  c
  ✓ prime.each_tree.iter_3.nap  0.0s  d
  ⟳ prime.each_tree pass 4/4  ETA 0.0s
  ■ run ok  0.0s
status:
prime: Done skip=None retrying=false
prime.each_tree: Done skip=None retrying=false
prime.each_tree.iter_0.nap: Done skip=None retrying=false
prime.each_tree.iter_1.nap: Done skip=None retrying=false
prime.each_tree.iter_2.nap: Done skip=None retrying=false
prime.each_tree.iter_3.nap: Done skip=None retrying=false
--- exit ---
exit_code: 0
