oscilloscope/crates/oscilloscope-core/tests/snapshots/golden__on_error_skip.snap
---
source: crates/oscilloscope-core/tests/golden.rs
expression: rendered
---
--- observation 0 ---
log:
  ▶ prime.flaky  shell ls /nonexistent-osp-fixture-path
  ✗ prime.flaky  /bin/ls failed (exit 1): ls: /nonexistent-osp-fixture-path: No such file or directory
  ▶ prime.cleanup  shell echo cleaned
  ✓ prime.cleanup  0.0s  cleaned
  ■ run ok  0.0s
status:
prime: Done skip=None retrying=false
prime.cleanup: Done skip=None retrying=false
prime.flaky: Failed skip=None retrying=false
--- exit ---
exit_code: 0
