oscilloscope/crates/oscilloscope-core/tests/snapshots/golden__sigint_once.snap
---
source: crates/oscilloscope-core/tests/golden.rs
expression: rendered
---
--- observation 0 ---
log:
status:
--- observation 1 ---
log:
  ▶ prime.slow  shell tail -f /dev/null
  ■ run cancelled: Interrupted (Ctrl-C/SIGINT)  0.2s
status:
prime: Failed skip=None retrying=false
prime.slow: Cancelled skip=None retrying=false
--- exit ---
exit_code: 130
